[package]
authors = ["Henrik AlseÌr <henrik.alser@me.com>"]
name = "nrf-embassy"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "=1.0.0-alpha.9" }
embassy-executor = { version = "0.1.1", features = ["defmt", "nightly"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["nightly"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",  features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-traits", "nightly"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly"] }
embassy-sync = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = "0.7.8"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
libm = "0.2.2"
mpu6050-async = { path = "../" }
qmc5883l-async = { path = "../../qmc5883l-async" }
# qmc5883l-async = { git = "https://github.com/kalkyl/qmc5883l-async" }

[features]
# set logging levels here
default = ["embassy-nrf/nrf52840"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }